[tool.poetry]
name = "client-demov2"
version = "0.1.0"
description = ""
authors = ["Reagan <reagan.chan@ncs.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
